using-kubernates/client-service/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment-v1
spec:
  selector:
    matchLabels:
      app: client
      version: v1
  template:
    metadata:
      labels:
        app: client
        version: v1
    spec:
      containers:
        - name: client
          image: mianmahroz/client-service
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /etc/podinfo
              name: podinfo
      volumes:
        - name: podinfo
          downwardAPI:
            items:
              - path: "labels"
                fieldRef:
                  fieldPath: metadata.labels
---
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  type: ClusterIP
  selector:
    app: client
  ports:
    - port: 8080
      targetPort: 8080
